# yoda-translator

./: INTEGRATION.md  README.md  docker-compose.test.yml  pyproject.toml  rules.py  test.Dockerfile  yoda-dialogue.txt  yoda.py  yoda_cli.py
.github/: TASK.md  copilot-instructions.md
